--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"@lowlighter/matcha": "^2.0.1"
 	},
 	"type": "module"
 }
