Some more basic scaffolding (nothing functional)

--- a/modd.conf
+++ b/modd.conf
@@ -9,7 +9,7 @@ backend/go.mod {
     prep: go mod tidy
 }
 
-frontend/src/** {
+frontend/src/** frontend/*.js {
     indir: frontend
     prep: npm run build
 }
