modd: enable devd proxying + live reload

--- a/modd.conf
+++ b/modd.conf
@@ -3,6 +3,10 @@ backend/**.go !**_test.go {
     daemon: go run . serve
 }
 
+backend/pb_public/** {
+    daemon: go run github.com/cortesi/devd/cmd/devd\@latest -m http://localhost:8090
+}
+
 backend/go.mod {
     indir: backend
     prep: go mod download
