Schedule is mandatory in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,5 +2,9 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/frontend"
+    schedule:
+      interval: "daily"
   - package-ecosystem: "gomod"
     directory: "/backend"
+    schedule:
+      interval: "daily"
