--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"dependencies": {
+		"cookie": "^0.7.2",
 		"pocketbase": "^0.26.2"
 	},
 	"devDependencies": {
+		"@lowlighter/matcha": "^3.0.0",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@sveltejs/kit": "^2.37.0",
@@ -20,8 +22,7 @@
 		"svelte": "^5.38.6",
 		"svelte-check": "^4.3.1",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.4",
-		"@lowlighter/matcha": "^3.0.0"
+		"vite": "^7.1.4"
 	},
 	"type": "module"
 }
