--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,13 @@
 		"svelte": "^5.38.6",
 		"svelte-check": "^4.3.1",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.4",
-		"cookie": "^0.7.2"
+		"vite": "^7.1.4"
+	},
+       	"overrides": {
+		"@sveltejs/kit": {
+			"cookie": "1.0.0",
+			"@types/cookie": "1.0.0"
+		}
 	},
 	"type": "module"
 }
